--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 assets/.DS_Store
 .DS_Store
 /.project
+.idea/vcs.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+parapentegijon.github.io.iml
